--- a/Ventas.Servicios.Interfacez/Ventas.Servicios.Interfacez.csproj
+++ b/Ventas.Servicios.Interfacez/Ventas.Servicios.Interfacez.csproj
@@ -41,12 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IGestorDePersonas.cs" />
+    <Compile Include="IGestorDeProductos.cs" />
     <Compile Include="IGestorDeClientes.cs" />
     <Compile Include="Peticiones\ActualizacionDeCliente.cs" />
     <Compile Include="Peticiones\NuevoCliente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Respuestas\CategoriaRegistrada.cs" />
     <Compile Include="Respuestas\ClienteCompleto.cs" />
     <Compile Include="Respuestas\ClienteRegistrado.cs" />
+    <Compile Include="Respuestas\PersonaGenerica.cs" />
+    <Compile Include="Respuestas\ProductoRegistrado.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
