--- a/Ventas.Servicios.MapaDeConversiones/Ventas.Servicios.MapaDeConversiones.csproj
+++ b/Ventas.Servicios.MapaDeConversiones/Ventas.Servicios.MapaDeConversiones.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MapaDeClientes.cs" />
+    <Compile Include="MapaDePersonas.cs" />
+    <Compile Include="MapaDeProductos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
