--- a/Ventas.Servicios.ImplementacionConSQL/Ventas.Servicios.ImplementacionConSQL.csproj
+++ b/Ventas.Servicios.ImplementacionConSQL/Ventas.Servicios.ImplementacionConSQL.csproj
@@ -51,6 +51,7 @@
     <Compile Include="GestorDeClientes.cs" />
     <Compile Include="GestorDePersonas.cs" />
     <Compile Include="GestorDeProductos.cs" />
+    <Compile Include="GestorDeVentas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
