--- a/Ventas.Presentacion.Web/Web.config
+++ b/Ventas.Presentacion.Web/Web.config
@@ -83,11 +83,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="VentasDB" connectionString="
-         server=.;
-         database=VentasDBv2;
-         User ID=sa;
-         Password=sql;"
-         providerName="System.Data.SqlClient" />
+    <add name="VentasDB" connectionString="          server=.;          database=VentasDBv2;          User ID=sa;          Password=sql;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
