--- a/Ventas.Infraestructura.Seguridad/Ventas.Infraestructura.Seguridad.csproj
+++ b/Ventas.Infraestructura.Seguridad/Ventas.Infraestructura.Seguridad.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6DFA1C36-5D71-4C60-B7D5-470AB3C63F41}</ProjectGuid>
+    <ProjectGuid>{E3AFDB85-96FD-4968-B2EB-D37C2813B909}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ventas.Servicios.Interfacez</RootNamespace>
-    <AssemblyName>Ventas.Servicios.Interfacez</AssemblyName>
+    <RootNamespace>Ventas.Infraestructura.Seguridad</RootNamespace>
+    <AssemblyName>Ventas.Infraestructura.Seguridad</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,8 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JWT, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\JWT.5.2.3\lib\net46\JWT.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,28 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IGestorDePersonas.cs" />
-    <Compile Include="IGestorDeProductos.cs" />
-    <Compile Include="IGestorDeClientes.cs" />
-    <Compile Include="IGestorDeSession.cs" />
-    <Compile Include="IGestorDeVentas.cs" />
-    <Compile Include="Peticiones\ActualizacionDeCliente.cs" />
-    <Compile Include="Peticiones\DetalleDeLaNuevaVenta.cs" />
-    <Compile Include="Peticiones\IntentoDeInicioDeSession.cs" />
-    <Compile Include="Peticiones\NuevaVenta.cs" />
-    <Compile Include="Peticiones\NuevoCliente.cs" />
-    <Compile Include="Peticiones\NuevoUsuario.cs" />
+    <Compile Include="GestorDeCriptografia.cs" />
+    <Compile Include="GestorDeJWT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Respuestas\CategoriaRegistrada.cs" />
-    <Compile Include="Respuestas\ClienteCompleto.cs" />
-    <Compile Include="Respuestas\ClienteRegistrado.cs" />
-    <Compile Include="Respuestas\MontoDeVentaPorVendedor.cs" />
-    <Compile Include="Respuestas\PersonaGenerica.cs" />
-    <Compile Include="Respuestas\ProductoRegistrado.cs" />
-    <Compile Include="Respuestas\Session.cs" />
-    <Compile Include="Respuestas\VentaRegistrada.cs" />
-    <Compile Include="Validaciones\StringRangeAttribute.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Ventas.Servicios.Interfacez\Ventas.Servicios.Interfacez.csproj">
+      <Project>{6dfa1c36-5d71-4c60-b7d5-470ab3c63f41}</Project>
+      <Name>Ventas.Servicios.Interfacez</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
